# VoxelGameVulkan

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Readme.md
Game/: CMakeLists.txt  main.cpp
Libraries/x86/include/GLAD/: glad.h
